.provarCaches/00D5f000005vwGkEAI/objects/rstk__PO_Print_Header__c.object
<CustomObject>
    <description>PO_Print_Header__c</description>
    <fields>
        <fullName>rstk__Agreement_No__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Agreement No</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__BillTo_City__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>BillTo_City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__BillTo_Contact_Email__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>BillTo_Contact_Email</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__BillTo_Country__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>BillTo_Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__BillTo_Fax__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>BillTo_Fax</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__BillTo_Phone__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>BillTo_Phone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__BillTo_State_or_Province__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>BillTo_State_or_Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__BillTo_Street__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>BillTo_Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__BillTo_Zip_or_Postal_Code__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>BillTo_Zip_or_Postal_Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__Buyer_Contact__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Buyer Contact</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__Buyer_Email__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Buyer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>rstk__Buyer_Phone__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Buyer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>rstk__Carrier__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Transport Via</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__Company_Logo__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Company Logo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>rstk__FOB__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>FOB Point</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__Federal_ID_Number__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Federal ID Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__Freight_Terms__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Freight Terms</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__MailTo_City__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>MailTo City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__MailTo_Contact_Email__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>MailTo_Contact_Email</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__MailTo_Country__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>MailTo Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__MailTo_Fax__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>MailTo_Fax</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__MailTo_Phone__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>MailTo_Phone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__MailTo_State_or_Province__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>MailTo State or Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__MailTo_Street__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>MailTo Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__MailTo_Zip_or_Postal_Code__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>MailTo Zip or Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__Order_Number__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Order Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__Order_Total__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Order Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__PO_Add_Date__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Original PO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__Payment_Terms__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Payment Terms</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__PrintHeader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>POPRINTHDR</label>
        <referenceTo>rstk__poprinthdr__c</referenceTo>
        <relationshipName>POPrintHeaders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ShipTo_City__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ShipTo City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ShipTo_Contact_Email__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ShipTo_Contact_Email</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__ShipTo_Country__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ShipTo Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ShipTo_Fax__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ShipTo_Fax</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ShipTo_Name__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ShipTo Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ShipTo_Phone__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ShipTo_Phone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ShipTo_State_or_Province__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ShipTo State or Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ShipTo_Street__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ShipTo Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ShipTo_Zip_or_Postal_Code__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ShipTo Zip or Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__Ship_Via__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Ship Via</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__Vendor_Name__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Vendor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__Vendor_No__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Vendor No</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__Vendor_Revision__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Revision</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__Vendor_Submission_Date__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>PO Revision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__currency_total__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Currency Total</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pages__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Pages</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>PO Print Header</label>
    <nameField>
        <label>POPrintHeader Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>POPrintHeaders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>